--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.3.4",
 		"framer-motion": "^10.3.2",
+		"hls.js": "^1.3.5",
+		"nanoid": "^4.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-paginate": "^8.1.4",
 		"react-router-dom": "^6.9.0",
 		"react-scripts": "5.0.1",
+		"react-star-ratings": "^2.3.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
